@@ -1,5 +1,5 @@
 /*
- * $Id: tables.h,v 1.38 2003/03/13 14:47:55 mikulik Exp $
+ * $Id: tables.h,v 1.39 2003/05/17 05:59:01 sfeam Exp $
  */
 
 /* GNUPLOT - tables.h */
@@ -211,6 +211,7 @@ extern const struct gen_table filledcurves_opts_tbl[];
 /* Function prototypes */
 int lookup_table __PROTO((const struct gen_table *, int));
 parsefuncp_t lookup_ftable __PROTO((const struct gen_ftable *, int));
+int lookup_table_nth __PROTO((const struct gen_table *tbl, const char *search_str));
 int lookup_table_nth_reverse __PROTO((const struct gen_table *tbl, int table_len, const char *search_str));
 
 
